[gd_scene load_steps=2 format=3 uid="uid://dnnaegnbqppxc"]

[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_7fsul"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7fsul")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 1895.0
offset_bottom = 1055.0
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBox" type="VBoxContainer" parent="MC"]
layout_mode = 2
alignment = 2

[node name="TitleHBox" type="HBoxContainer" parent="MC/VBox"]
layout_mode = 2

[node name="MC" type="MarginContainer" parent="MC/VBox/TitleHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsTitleLabel" type="Label" parent="MC/VBox/TitleHBox/MC"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 145
text = "Settings"
horizontal_alignment = 1

[node name="SettingsMC" type="MarginContainer" parent="MC/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Grid" type="GridContainer" parent="MC/VBox/SettingsMC"]
layout_mode = 2
theme_override_constants/h_separation = 47
theme_override_constants/v_separation = 40
columns = 3

[node name="SoundSettings" type="ColorRect" parent="MC/VBox/SettingsMC/Grid"]
custom_minimum_size = Vector2(575, 275)
layout_mode = 2
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="MC" type="MarginContainer" parent="MC/VBox/SettingsMC/Grid/SoundSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MC/VBox/SettingsMC/Grid/SoundSettings/MC"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MC/VBox/SettingsMC/Grid/SoundSettings/MC/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sound"

[node name="NumberSettings" type="ColorRect" parent="MC/VBox/SettingsMC/Grid"]
custom_minimum_size = Vector2(575, 275)
layout_mode = 2
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="MC" type="MarginContainer" parent="MC/VBox/SettingsMC/Grid/NumberSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MC/VBox/SettingsMC/Grid/NumberSettings/MC"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MC/VBox/SettingsMC/Grid/NumberSettings/MC/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Numbers"

[node name="SaveSettings" type="ColorRect" parent="MC/VBox/SettingsMC/Grid"]
custom_minimum_size = Vector2(575, 275)
layout_mode = 2
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="MC" type="MarginContainer" parent="MC/VBox/SettingsMC/Grid/SaveSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="NameLabel" type="Label" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Game Saves"

[node name="Grid" type="GridContainer" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 45
theme_override_constants/v_separation = 20
columns = 2

[node name="LoadButton" type="Button" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox/Grid"]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Load"

[node name="SaveButton" type="Button" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox/Grid"]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="VBox" type="VBoxContainer" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox/Grid"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox/Grid/VBox"]
layout_mode = 2
text = "Auto save"

[node name="MenuButton" type="MenuButton" parent="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox/Grid/VBox"]
layout_mode = 2
text = "5 min"
item_count = 4
popup/item_0/text = "Never"
popup/item_1/text = "1 min"
popup/item_1/id = 1
popup/item_2/text = "5 min"
popup/item_2/id = 2
popup/item_3/text = "15 min"
popup/item_3/id = 3

[node name="ControlsSettings" type="ColorRect" parent="MC/VBox/SettingsMC/Grid"]
custom_minimum_size = Vector2(575, 275)
layout_mode = 2
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="MC" type="MarginContainer" parent="MC/VBox/SettingsMC/Grid/ControlsSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MC/VBox/SettingsMC/Grid/ControlsSettings/MC"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBox/SettingsMC/Grid/ControlsSettings/MC/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="MC" type="MarginContainer" parent="MC/VBox/SettingsMC/Grid"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="Gameplay" type="ColorRect" parent="MC/VBox/SettingsMC/Grid"]
custom_minimum_size = Vector2(575, 275)
layout_mode = 2
color = Color(0.329412, 0.329412, 0.329412, 1)

[node name="MC" type="MarginContainer" parent="MC/VBox/SettingsMC/Grid/Gameplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MC/VBox/SettingsMC/Grid/Gameplay/MC"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VBox/SettingsMC/Grid/Gameplay/MC/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Gameplay"

[connection signal="button_down" from="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox/Grid/LoadButton" to="." method="_on_load_button_button_down"]
[connection signal="button_down" from="MC/VBox/SettingsMC/Grid/SaveSettings/MC/VBox/Grid/SaveButton" to="." method="_on_save_button_button_down"]
